# capstone_project

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
grad-project-main/: README.md
grad-project-main/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  seed_shared_eligibility.py  uniclass_scheduler.db  uniclass_scheduler_bad_import_backup.db
grad-project-main/backend/alembic/: env.py
grad-project-main/backend/alembic/versions/: 9e3d1c7a4b10_phase4_expected_enrollment.py  a513f31b923d_phase3_registration_and_window.py  c1a2b3d4e5f6_add_room_type_column.py  f2a4c2e5b9af_phase4_scheduled_meetings.py
grad-project-main/backend/app/: __init__.py  main.py
grad-project-main/backend/app/api/: admin_import.py  admin_registration.py  admin_schedule.py  admin_sections.py  auth.py  courses.py  deps.py  rooms.py  router.py  sections.py  users.py
grad-project-main/backend/app/core/: audit.py  config.py  security.py
grad-project-main/backend/data/: CRN_View_File_Updated(FINAL).xlsx  J2_all_rooms_with_buildingcode.csv
grad-project-main/backend/scripts/: delete_it101.py  fix_duplicate_sections.py  fix_int436_sections.py  fix_int436_to_two_sections.py  fix_section_codes_from_excel.py  fix_sections_data.py  ga_schedule_sections.py  ga_schedule_summer.py  import_courses_csv.py  patch_is_eligibility.py  seed_course_eligibility.py  seed_data.py  seed_demo_students.py  seed_schedule_and_rooms.py
grad-project-main/backend/tests/: test_core_data_apis.py  test_scheduling_phase4.py
(+41 files in other folders)
